pratical/final/database/2022/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ctfd-db-2022-deployment
  namespace: database
  labels:
    ctfd.db.2022.deployment: ctfd-db-2022-deployment
spec:
#  serviceName: "ctfd-db-2022-service"
#  replicas: 2
  selector:
    matchLabels:
      ctfd.db.2022.pod: ctfd-db-2022-pod
  template:
    metadata:
      labels:
        ctfd.db.2022.pod: ctfd-db-2022-pod
    spec:
      containers:
      - image: mariadb:10.4.12
        name: ctfd-db-2022
        args:
        - mysqld
        - --character-set-server=utf8mb4
        - --collation-server=utf8mb4_unicode_ci
        - --wait_timeout=28800
        - --log-warnings=0
        volumeMounts:
        - name: ctfd-db-2022-pvc #datadir
          mountPath: /var/lib/mysql
        - name: ctfd-db-2022-secret
          mountPath: /etc/ctfd-db
      restartPolicy: Always
      tolerations:
        - key: 'type'
          operator: 'Equal'
          value: 'db'
      volumes:
      - name: ctfd-db-2022-pvc
        persistentVolumeClaim:
          claimName: ctfd-db-2022-pvc
      - name: ctfd-db-2022-secret
        secret:
          secretName: ctfd-db-2022
